...
        tools:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/header"/>

    <ImageView
        android:id="@+id/list_ingredients_button"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:src="@drawable/ic_info"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toStartOf="@id/list_widget_button"
        app:layout_constraintTop_toTopOf="parent"
...
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_widget" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/master_list_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
...
