<?xml version="1.0" encoding="utf-8"?>
<!-- Display the static master list fragment -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/master_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"/>

